# tetris_solved

./: .gitignore  chain_runs.py  eval.py  eval_metrics.py  game.py  main.py  plot_training.py  pyproject.toml  renderer.py  test_game.py  train.py  tune.py
.claude/: CLAUDE.md  for_human.md  plasticity_fixes.md  settings.local.json  stage_6_7.md
rl_training/: afterstate_cnn.py  afterstate_dqn.py  afterstate_qrdqn.py  afterstate_spr.py  chain_runs.py  dqn.py  iqn.py  mcts.py  muzero_afterstate.py  ppo.py  qrdqn.py  rainbow.py  sac.py  sac_v2.py  tune.py
tests/: conftest.py
tests/integration/: test_afterstate_training.py  test_env.py  test_eval.py  test_eval_metrics.py  test_qrdqn.py  test_training.py
tests/unit/: test_afterstate.py  test_block.py  test_game.py  test_muzero_afterstate.py  test_qrdqn.py  test_rewards.py
tetris/: __init__.py  game.py  renderer.py
tetris/env/: __init__.py  afterstate.py  rewards.py  tetris_env.py
